--- a/style.css
+++ b/style.css
@@ -111,4 +111,41 @@ textarea{
 
 }
 
+@media (max-width: 700px){
+    body{
+        display: flex;
+        flex-direction: column;
+    }
+    h1{
+        margin-right: auto;
+        margin-left: auto;
+       
+    }
+    form{
+        align-items: flex-start;
+        justify-content: center;
+    }
+    #description{
+        padding-bottom: 5px;
+        display: flex;
+        justify-content: center;
+      }
+      p{
+        width: 100%;
+        margin-right: auto;
+        padding: 10px;
+        margin-top: 30px;
+        margin-bottom: 15px;
+        background-color: rgb(108, 172, 175);
+       }
+       input{
+        display: flex;
+        justify-content: center;
+        border-radius: 30px;
+        width: 100%;
+        height: 30px;
+    }
+
+ 
+}
 
